// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListResource Component Component successfully loaded: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation RENDER_FUNCTION) Vue 3's render function API has changed. You can opt-in to the new API with:

  configureCompat({ RENDER_FUNCTION: false })

  (This can also be done per-component via the "compatConfig" option.)
  Details: https://v3-migration.vuejs.org/breaking-changes/render-function-api.html",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation WATCH_ARRAY) (2)",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation GLOBAL_EXTEND) (2)",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "bordered" with v-bind value \`false\` will render bordered="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "borderless" with v-bind value \`false\` will render borderless="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "captionTop" with v-bind value \`false\` will render captionTop="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "dark" with v-bind value \`false\` will render dark="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "fixed" with v-bind value \`false\` will render fixed="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noBorderCollapse" with v-bind value \`false\` will render noBorderCollapse="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "outlined" with v-bind value \`false\` will render outlined="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "small" with v-bind value \`false\` will render small="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "stickyHeader" with v-bind value \`false\` will render stickyHeader="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "striped" with v-bind value \`false\` will render striped="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "stacked" with v-bind value \`false\` will render stacked="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "footClone" with v-bind value \`false\` will render footClone="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noFooterSorting" with v-bind value \`false\` will render noFooterSorting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noSortReset" with v-bind value \`false\` will render noSortReset="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "sortDesc" with v-bind value \`false\` will render sortDesc="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "sortIconLeft" with v-bind value \`false\` will render sortIconLeft="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "sortNullLast" with v-bind value \`false\` will render sortNullLast="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noSelectOnClick" with v-bind value \`false\` will render noSelectOnClick="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "selectable" with v-bind value \`false\` will render selectable="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "busy" with v-bind value \`false\` will render busy="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noProviderFiltering" with v-bind value \`false\` will render noProviderFiltering="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noProviderPaging" with v-bind value \`false\` will render noProviderPaging="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "noProviderSorting" with v-bind value \`false\` will render noProviderSorting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <BTable",
    "class="mb-0"",
    "hover=""",
    "id="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isDeleting" with v-bind value \`false\` will render isDeleting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrDeleteModal",
    "translated-item-type="resourceName"",
    "onDeleteItem=fn<bound deleteResource>",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "isTesting" with v-bind value \`false\` will render isTesting="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrDeleteModal",
    "translated-item-type="resourceName"",
    "onDeleteItem=fn<bound deleteResource>",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "show" with v-bind value \`false\` will render show="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrClearResourceSessions",
    "show=false",
    "resource-name=""",
    "onClearSessions=fn<bound clearSessionsAndCloseModal>",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) (2)",
    "
",
    " at <FrClearResourceSessions",
    "show=false",
    "resource-name=""",
    "onClearSessions=fn<bound clearSessionsAndCloseModal>",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
      {
        "key": "actions",
        "label": "",
      },
    ],
    "ref="VTU_COMPONENT"",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`ListResource Component Enables/disables column sorting based on queryThreshold when table data changes: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hideBorder" with v-bind value \`false\` will render hideBorder="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPagination",
    "key=2",
    "value=1",
    "aria-controls="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hideEllipsis" with v-bind value \`false\` will render hideEllipsis="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPagination",
    "key=2",
    "value=1",
    "aria-controls="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hideGoToFirstPageButton" with v-bind value \`false\` will render hideGoToFirstPageButton="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPagination",
    "key=2",
    "value=1",
    "aria-controls="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hideGoToLastPageButton" with v-bind value \`false\` will render hideGoToLastPageButton="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPagination",
    "key=2",
    "value=1",
    "aria-controls="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hidePageNumbers" with v-bind value \`false\` will render hidePageNumbers="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPagination",
    "key=2",
    "value=1",
    "aria-controls="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "hidePageSizeSelector" with v-bind value \`false\` will render hidePageSizeSelector="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrPagination",
    "key=2",
    "value=1",
    "aria-controls="list-resource-table"",
    " ...",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;

exports[`ListResource Component Pagination attributes verification hide pagination when data table have data and is loading: console-warn-snapshot 1`] = `
[
  [
    "[Vue warn]: (deprecation ATTR_FALSE_VALUE) Attribute "buttonSpinner" with v-bind value \`false\` will render buttonSpinner="false" instead of removing it in Vue 3. To remove the attribute, use \`null\` or \`undefined\` instead. If the usage is intended, you can disable the compat behavior and suppress this warning with:

  configureCompat({ ATTR_FALSE_VALUE: false })

  Details: https://v3-migration.vuejs.org/breaking-changes/attribute-coercion.html",
    "
",
    " at <FrSpinner",
    "class="py-5"",
    ">",
    "
",
    " at <ListResource",
    "routerParameters=",
    {
      "icon": "testIcon",
      "managedProperties": {
        "name": {
          "searchable": true,
          "type": "string",
          "viewable": false,
        },
        "sn": {
          "searchable": true,
          "type": "number",
          "viewable": false,
        },
        "typeTest": {
          "searchable": true,
          "type": "array",
          "viewable": false,
        },
        "viewTest": {
          "searchable": false,
          "type": "boolean",
          "viewable": false,
        },
      },
      "order": [
        "name",
        "sn",
        "viewTest",
        "typeTest",
      ],
      "resourceName": "resourceName",
      "resourceType": "managed",
      "routeName": "ListResource",
    },
    "propColumns=",
    [
      {
        "key": "userName",
        "label": "Username",
        "sortDirection": "desc",
        "sortable": true,
      },
    ],
    "ref="VTU_COMPONENT"",
    " ...",
    ">",
    "
",
    " at <VTUROOT>",
  ],
]
`;
